--- a/public/play/css/openeditplay.css
+++ b/public/play/css/openeditplay.css
@@ -65,6 +65,7 @@ body.touch div#touchUI {
   color: white;
   width: 0;
   height: 0;
+  pointer-events: none;
 }
 body.touch div#touchUI > div {
   position: fixed;
@@ -75,7 +76,7 @@ body.touch div#touchUI > div {
   border: 2px solid;
   text-align: center;
 }
-body.touch div#touchUI > div:active {
+body.touch div#touchUI > div.pressed {
   background: white;
 }
 
