--- a/public/play/css/openeditplay.css
+++ b/public/play/css/openeditplay.css
@@ -6,21 +6,29 @@
 }
 
 html, body {
+  top: 0;
+  left: 0;
   position: relative;
-  width: 100%;
-  height: 100%;
   background: black;
   margin: 0;
   padding: 0;
 
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
+#screen {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw; /* width and height will be overridden */
+  height: 100vh;
+  transition: all 0.25s;
+}
 canvas {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100% !important;
-  height: 100% !important;
+  width: 100%;
+  height: 100%;
 }
 
 #fullscreenInfo {
@@ -60,15 +68,12 @@ body.nativeFullscreen #backButton {
 }
 
 body.touch div#touchUI {
-  position: fixed;
   z-index: 100;
   color: white;
-  width: 0;
-  height: 0;
   pointer-events: none;
 }
 body.touch div#touchUI > div {
-  position: fixed;
+  position: absolute;
   display: none;
   width: 60px;
   height: 60px;
