--- a/builds/openeditplay.editor.css
+++ b/builds/openeditplay.editor.css
@@ -660,6 +660,11 @@ td.propertyContent {
   float: left;
   clear: both;
 }
+button.button:disabled {
+  filter: grayscale(100%);
+  cursor: default;
+  opacity: 0.5;
+}
 .confirmationButtons {
   text-align: center;
 }
