--- a/src/editor/editor.scss
+++ b/src/editor/editor.scss
@@ -30,6 +30,7 @@ body, html {
   letter-spacing: 1px;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-shadow: 1px 1px 1px #060606;
+  overflow: hidden;
 }
 
 .select-none {
