--- a/public/css/front.css
+++ b/public/css/front.css
@@ -15,7 +15,7 @@ html, body {
 #topBar {
     width: 100vw;
     position: fixed;
-    z-index: 1000;
+    z-index: 100;
     height: 40px;
     text-align: center;
 }
@@ -45,10 +45,16 @@ html, body {
     /*text-shadow: #52bb52 0 0 1px;*/
     text-shadow: #bcffc2 1px 1px 3px;
 }
-
+#profileButtonContainer {
+    position: fixed;
+    top: 0px;
+    right: 10px;
+    z-index: 1000;
+}
 #createGameTopBarButton {
     color: #8ec983 !important;
 }
+
 
 #topArea {
     height: 400px;
@@ -150,12 +156,7 @@ html, body {
     padding: 70px 20px;
 }
 
-#gameList {
-    background-image: url("/img/bg_pattern.png");
-}
-
 #about {
-    
     background: #fafffb;
     margin: 0px auto;
     width: 90%;
