--- a/public/play/css/openeditplay.play.css
+++ b/public/play/css/openeditplay.play.css
@@ -77,6 +77,7 @@ body.touch div#touchUI {
   z-index: 100;
   color: white;
   pointer-events: none;
+  display: block;
 }
 body.touch div#touchUI > div {
   position: absolute;
