games as tables in main page etc.

--- a/public/css/front.css
+++ b/public/css/front.css
@@ -156,6 +156,10 @@ html, body {
     padding: 70px 20px;
 }
 
+#games {
+    text-align: center;
+}
+
 #about {
     background: #fafffb;
     margin: 0px auto;
