super mobile friendly front page game scrolling

--- a/public/css/front.css
+++ b/public/css/front.css
@@ -153,11 +153,23 @@ html, body {
 }
 
 .section {
-    padding: 70px 20px;
+    padding: 70px 0px;
 }
+
+/*
+@media (max-width: 800px) {
+    .section {
+        padding: 70px 0px;
+    }
+}
+*/
 
 #games {
     text-align: center;
+}
+#gamesContent {
+    max-width: 100%;
+    overflow: auto;
 }
 
 #about {
