--- a/public/css/gameElement.css
+++ b/public/css/gameElement.css
@@ -2,7 +2,8 @@ table.gameList {
     width: 100%;
     margin: 0 auto;
     text-align: left;
-    border-collapse: co llapse;
+    max-width: 800px;
+    border-collapse: collapse;
 }
 
 table.gameList > * {
