--- a/src/editor/variables.scss
+++ b/src/editor/variables.scss
@@ -16,6 +16,7 @@ $editor-border-color: #bfbfbf;
 
 $center-backround: black;
 $other-backround: #363636;
+$noEditAccess-backround: #232f24;
 $other-backround-hilighted: #505050;
 $layout-border-color: $editor-effect-color;
 
