--- a/src/editor/views/propertyEditorTypes.scss
+++ b/src/editor/views/propertyEditorTypes.scss
@@ -1,5 +1,5 @@
 .propertyEditor .property input {
-  background: #272727;
+  background: rgba(0, 0, 0, 0.12);
   border: 1px inset #444;
   padding: 2px 3px;
   outline: none;
