--- a/src/editor/views/treeView.scss
+++ b/src/editor/views/treeView.scss
@@ -23,6 +23,6 @@
 }
 
 .jstree-default .jstree-clicked {
-  background: $editor-effect-color-dark;
+  background: rgba(255, 255, 255, 0.06);;
   color: $editor-effect-color;
 }
