--- a/src/editor/module/performance.scss
+++ b/src/editor/module/performance.scss
@@ -20,7 +20,7 @@
 }
 
 .performanceItem {
-  border-top: 1px solid #424242;
+  border-top: 1px solid rgba(255, 255, 255, 0.08);
 }
 .performanceItemName {
   display: inline-block;
