--- a/src/editor/module/topBar.scss
+++ b/src/editor/module/topBar.scss
@@ -48,7 +48,7 @@ img.logo:hover {
 .topIconTextButtonContent {
   transform: translateY(-50%);
   padding: 10px;
-  background: #333;
+  background: rgba(0, 0, 0, 0.08);
   border: 1px outset #444;
 }
 .topIconTextButtonContent:hover {
