--- a/src/editor/module/types.scss
+++ b/src/editor/module/types.scss
@@ -32,7 +32,7 @@
 
 .typesDragHelper {
   margin-top: 30px;
-  color: #2f2f2f;
+  color: rgba(0, 0, 0, 0.17);
   text-shadow: none;
   font-size: 30px;
   letter-spacing: 5px;
