--- a/src/editor/views/popup/componentAdder.scss
+++ b/src/editor/views/popup/componentAdder.scss
@@ -14,7 +14,7 @@
   border: 1px solid white;
   padding: 15px;
   border-radius: 8px;
-  background: #888;
+  background: rgba(200, 200, 200, 0.25);
   max-width: 400px;
 
   box-shadow: 2px 2px 8px 1px #555;
