--- a/src/editor/editor.scss
+++ b/src/editor/editor.scss
@@ -11,7 +11,7 @@
 @import "views/treeView.scss";
 @import "views/propertyEditor.scss";
 @import "views/propertyEditorTypes.scss";
-@import "views/popup/popup.scss";
+@import "views/popup/Popup.scss";
 
 * {
   box-sizing: border-box;
