--- a/src/homepage/front.scss
+++ b/src/homepage/front.scss
@@ -72,7 +72,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url("../img/header-bg.jpg");
+    background-image: url("/img/header-bg.jpg");
     background-size: cover;
     background-position: center;
     opacity: 0.5;
