--- a/src/editor/editor.scss
+++ b/src/editor/editor.scss
@@ -30,7 +30,7 @@ body, html {
   font-weight: 200;
   letter-spacing: 1px;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  text-shadow: 1px 1px 1px #060606;
+  text-shadow: 1px 1px 1px #1a1a1a;
   overflow: hidden; // disables osX scrolling effect
 }
 
