--- a/src/editor/variables.scss
+++ b/src/editor/variables.scss
@@ -8,15 +8,15 @@ $bright-green: #53ff00;
 
 //$editor-effect-color: $cool-cyan;
 //$editor-effect-color: #f3ebd8;
-$editor-effect-color: #d7d7d7;
-$editor-effect-color-inactive: #a1a3a4;
+$editor-effect-color: #8d8d8d;
 $editor-effect-color-dark: #444344;
-$editor-text-color: #c3c3c3;
+$editor-text-color: #ccc8c6;
 $editor-border-color: #bfbfbf;
 
 $center-backround: black;
-$other-backround: #363636;
+$other-backround: #282828;
 $noEditAccess-backround: #232f24;
 $other-backround-hilighted: #505050;
-$layout-border-color: $editor-effect-color;
+$layout-border-color: #1f1f1f;
+$selected-tab-color: #3a3a3a;
 
