--- a/src/editor/layout/layout.scss
+++ b/src/editor/layout/layout.scss
@@ -2,7 +2,7 @@
 
 .packButton {
     position: absolute;
-    padding: 2px 10px;
+    padding: 1px 10px;
     margin-top: 1px;
     z-index: 100;
 }
@@ -28,7 +28,7 @@ div.nonRight {
 div.right {
     border-left: 1px solid $layout-border-color;
     width: 300px;
-    border-radius: 8px;
+    border-radius: 0px;
     min-width: 200px;
 }
 div.right.packed {
@@ -66,7 +66,7 @@ div.bottom.packed {
     max-height: 30px;
 }
 div.bottom .packButton {
-    top: 0;
+    top: -2px;
     right: 0;
 }
 
@@ -87,7 +87,7 @@ div.center {
     //color: #adadad;
 }
 div.moduleContainer.packed {
-    border-color: $editor-effect-color-inactive;
+    //border-color: $editor-effect-color-inactive;
 }
 div.moduleContainer.noModules {
     border-color: #333;
