--- a/src/editor/module/topBar.scss
+++ b/src/editor/module/topBar.scss
@@ -12,19 +12,30 @@ div.top {
 }
 
 @keyframes rainbow {
-  0%   { filter: sepia(100%) hue-rotate(0deg); }
-  100% { filter: sepia(100%) hue-rotate(360deg); }
+  0% {
+    filter: sepia(100%) hue-rotate(0deg);
+  }
+  100% {
+    filter: sepia(100%) hue-rotate(360deg);
+  }
 }
+
 @keyframes rainbowLittle {
-  0%   { filter: sepia(30%) hue-rotate(0deg); }
-  100% { filter: sepia(30%) hue-rotate(360deg); }
+  0% {
+    filter: sepia(30%) hue-rotate(0deg);
+  }
+  100% {
+    filter: sepia(30%) hue-rotate(360deg);
+  }
 }
+
 img.logo {
   height: 100%;
   margin: 0;
   padding: 15px;
   box-sizing: border-box;
 }
+
 img.logo:hover {
   animation: rainbow 7s infinite;
 }
@@ -51,10 +62,12 @@ img.logo:hover {
   background: rgba(0, 0, 0, 0.08);
   border: 1px outset #444;
 }
+
 .topIconTextButtonContent:hover {
   background: #373737;
   animation: rainbowLittle 7s infinite;
 }
+
 .topIconTextButtonContent:active {
   border: 1px inset #555;
 }
@@ -63,3 +76,50 @@ img.logo:hover {
   overflow: hidden;
 }
 
+div.topSceneControlButtons {
+  display: inline-block;
+  position: absolute;
+  top: 50%;
+  left: 50vw;
+  transform: translateX(-50%) translateY(-50%);
+
+  border: 1px solid black;
+  box-shadow: inset 0 1px 3px 0px #e8e8e8, 0 0 2px black;
+
+  border-radius: 4px;
+  
+}
+@keyframes blinkPlayButton {
+  0% { opacity: 1 }
+  50% { opacity: 0.8 }
+  100% { opacity: 1 }
+}
+div.topSceneControlButtons.topSceneControlButtonsPaused div.button[controlButtonType='play'] {
+  color: white;
+  text-shadow: 0 0 20px white;
+  animation: blinkPlayButton 2s 0s infinite;
+}
+
+div.topSceneControlButton {
+  display: inline-block;
+  padding: 5px 15px;
+  font-size: 20px;
+  transition: none;
+
+  background: linear-gradient(to bottom, #6d6d6d, #383838);
+  text-shadow: none;
+}
+
+div.topSceneControlButton:hover {
+  box-shadow: inset 0 1px 4px 0px #888888;
+}
+
+div.topSceneControlButton:first-of-type {
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+}
+
+div.topSceneControlButton:last-of-type {
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
