--- a/public/edit/css/openeditplay.editor.css
+++ b/public/edit/css/openeditplay.editor.css
@@ -77,7 +77,7 @@ button.button i.fa {
   flex: 1;
   overflow: hidden;
   position: relative;
-  box-shadow: 0 -1px 6px -2px black;
+  box-shadow: 0 -3px 7px -4px black;
 }
 .moduleTab {
   /*background: rgba(0, 0, 0, 0.30);*/
@@ -107,6 +107,9 @@ button.button i.fa {
 }
 .moduleTab:not(.moduleEnabled) {
   display: none;
+}
+body.noEditAccess .moduleTab.moduleSelected {
+  background: #232f24;
 }
 .packButton {
     position: absolute;
@@ -222,6 +225,9 @@ div.moduleContainer.noModules {
 .module.hidden {
   opacity: 0.0;
   visibility: hidden;
+}
+body.noEditAccess .module {
+  background: #232f24;
 }
 div.top {
   position: relative;
@@ -394,8 +400,8 @@ div.topSceneControlButton:last-of-type {
   overflow: hidden;
 }
 .module-scene canvas {
-  /*width: 100% !important; *//* PIXI tries to override by settings the actual resolution. That's why !important *//**/
-  /*height: 100% !important;*/
+  width: 100% !important; /* PIXI tries to override by settings the actual resolution. That's why !important */
+  height: 100% !important;
   margin: 0;
   padding: 0
 }
