--- a/public/play/css/openeditplay.player.css
+++ b/public/play/css/openeditplay.player.css
@@ -31,8 +31,8 @@ canvas {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 100% !important;
+    height: 100% !important;
 }
 
 #fullscreenInfo {
